--- a/Project_development/Sprint_1/Model Building.ipynb
+++ b/Project_development/Sprint_1/Model Building.ipynb
@@ -101,12 +101,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Using spiral images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Defining the path for training data and testing data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 95,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 96,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -152,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
+   "execution_count": 98,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -202,7 +211,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13  2  3 12]\n",
-      "0.8333333333333334\n"
+      "[14  1  6  9]\n",
+      "0.7666666666666667\n"
      ]
     }
    ],
@@ -305,11 +314,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump(model,open('parkinson.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using wave images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining the path for wave training data and testing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "5hv2fgLED8vO",
+    "outputId": "1c1a4ada-99c6-43de-ee34-c6f8b7c81887"
+   },
+   "outputs": [],
+   "source": [
+    "path_training_data = r\"dataset/wave/training\"\n",
+    "path_testing_data = r\"dataset/wave/testing\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the training and testing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "rxwdUgSrHVnl",
+    "outputId": "8a569025-1f4d-41eb-8199-162a823517f0"
+   },
+   "outputs": [],
+   "source": [
+    "(x_train, y_train) = load_split(path_training_data)\n",
+    "(x_test, y_test) = load_split(path_testing_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Label Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(72, 54756) (72,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "y_train = label_encoder.fit_transform(y_train)\n",
+    "y_test = label_encoder.transform(y_test)\n",
+    "print(x_train.shape, y_train.shape)\n",
+    "# 0:healthy,1:Parkinson"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+       "                       n_jobs=None, oob_score=False, random_state=None,\n",
+       "                       verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=100)\n",
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testingPaths = list(paths.list_images(path_testing_data))\n",
+    "idxs = np.arange(0, len(testingPaths))\n",
+    "idxs = np.random.choice(idxs, size=(25,), replace=False) \n",
+    "images = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in idxs:\n",
+    "    # loading the testing image, clone it, and resize it \n",
+    "    image = cv2.imread(testingPaths[i]) \n",
+    "    output = image. copy() \n",
+    "    output = cv2. resize(output, (128, 128))\n",
+    "    \n",
+    "    # pre-processing the image \n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY) \n",
+    "    image = cv2.resize(image, (200, 200))\n",
+    "    image = cv2.threshold(image, 0, 255, cv2.THRESH_BINARY_INV | cv2.THRESH_OTSU) [1]\n",
+    "    \n",
+    "    # quantify the image and make predictions based on the extracted \n",
+    "    # features using the last trained Random Forest \n",
+    "    features = quantify_image(image) \n",
+    "    preds = model.predict([features])\n",
+    "\n",
+    "    label = label_encoder.inverse_transform(preds)[0]\n",
+    "\n",
+    "    # draw the colored class label on the output image and add it to the set of output images \n",
+    "    if label == \"healthy\":\n",
+    "        color = (0, 255, 0)  \n",
+    "    else:\n",
+    "        color = (0, 0, 255) \n",
+    "    cv2.putText(output, label, (3, 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5, color, 2) \n",
+    "    images.append(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11  4  7  8]\n",
+      "0.6333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(x_test)    # predictions on the testing data \n",
+    "\n",
+    "cm = confusion_matrix(y_test, predictions).flatten ()    # computing the confusion matrix\n",
+    "print(cm) \n",
+    "(tn, fp, fn, tp) = cm \n",
+    "\n",
+    "accuracy = (tp + tn) / float(cm.sum())     # computing the accuracy\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(model,open('parkinson_w.pkl', 'wb'))"
    ]
   },
   {
